kubernetes/apps/nextflow-demo/guardrails/ciliumnetworkpolicy-allow-registries.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/cilium/cilium/v1.18.1/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-registries-egress
  namespace: nextflow-demo
spec:
  endpointSelector: {}
  egress:
    - toFQDNs:
        - matchName: auth.docker.io
        - matchName: docker.io
        - matchName: ghcr.io
        - matchName: public.ecr.aws
        - matchName: quay.io
        - matchName: registry-1.docker.io
        - matchName: registry.k8s.io
        - matchName: us.gcr.io
        - matchName: gcr.io
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
